# Task2

./: Application.cpp  Application.h  CMakeLists.txt  Car.cpp  Car.h  Consumer.cpp  Consumer.h  Exception.cpp  Exception.h  GasolineTanker.cpp  GasolineTanker.h  GlobalProducer.cpp  GlobalProducer.h  Producer.cpp  Producer.h  RetailConsumer.cpp  RetailConsumer.h  Shop.cpp  Shop.h  Store.cpp  Store.h  Truck.cpp  Truck.h  WholesaleConsumer.cpp  WholesaleConsumer.h  main.cpp
